src/objects/FS_MDMRequestPageMessages__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Purpose: holds the custom page messages for sending MDM request.</description>
    <fields>
        <fullName>FS_AlreadySentMessage__c</fullName>
        <description>Purpose: message for TPR Opportunity that had previously sent MDM request</description>
        <label>Already Sent Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_NoAccessMessage__c</fullName>
        <description>Purpose: message for TPR Opportunity that has insufficient access for sending MDM Request.</description>
        <label>No Access Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_NotApprovedMessage__c</fullName>
        <description>Purpose: message for TPR Opportunity not yet approved from Finance</description>
        <label>Not Approved Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SuccessfullySentMessage__c</fullName>
        <description>Purpose: message for TPR Opportunity that MDM request has been sent successfully.</description>
        <label>Successfully Sent Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FS MDM Request Page Messages</label>
</CustomObject>